# py-repositories

./: .gitignore  README.md  REAMDE.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
scripts/: main.py
src/pyrepositories/: __init__.py  datasource.py  datatable.py  json_repository.py  lib.py  pg_repository.py
src/repositories/: __init__.py  datasource.py  datatable.py  json_repository.py  lib.py  pg_repository.py
